<resources>
    <string name="copyright2">All Rights Reserved</string>
    <string name="packup_white_board">Fold</string>
    <string name="show_white_board">Show Share</string>
    <string name="pencil">Pen</string>
    <string name="highlighter">Mark</string>
    <string name="erase">Erase</string>
    <string name="rescind">Undo</string>
    <string name="background">Color</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="upload">Upload</string>
    <string name="my_meeting_room">My Room</string>
    <string name="my_room">room</string>
    <string name="meeting_room_id">Room ID</string>
    <string name="strat_scheduler_meeting">Schedule a Meeting</string>
    <string name="contact_select">Select Contact</string>
    <string name="my_group">My Group</string>
    <string name="avatar_from_camera">Take Photo</string>
    <string name="avatar_from_gallery">Choose from Album</string>
    <string name="avatar_upload_failed">Profile photo upload failed.</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="delete">Remove</string>
    <string name="back">Back</string>
    <string name="contact_search_hint">Username/Title</string>
    <string name="pinned">Pinned</string>
    <string name="add_contact">Add Contacts</string>
    <string name="view_networked">Please view contacts after network is connected</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="call_num">Call ID</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="telephone">Telephone</string>
    <string name="avatar">Photo</string>
    <string name="action_success">Operation succeeded</string>
    <string name="action_fail">Operation failed</string>
    <string name="contact">Contacts</string>
    <string name="user_detail">User Details</string>
    <string name="user_not_found">User not found</string>
    <string name="quit_group">Quit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="dismiss">Delete</string>
    <string name="update_group_name">Update Group Name</string>
    <string name="update_name">Modify Name</string>
    <string name="add_member_to_group">Add Group Member</string>
    <string name="no_group">No Group</string>
    <string name="group_owner">(Creator)</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="go_on">Continue</string>
    <string name="edit">Edit</string>
    <string name="end">End</string>
    <string name="reject">Rejected call in</string>
    <string name="update">Edit</string>
    <string name="save">Save</string>
    <string name="group_has_incomplete_conference">There are incomplete meetings in this group.</string>
    <string name="peer_has_not_video_cap">Peer has no video capability</string>
    <string name="connection_timeout">Connection timeout,Please try again after using a new server!</string>
    <string name="join_meeting">Join a Meeting</string>
    <string name="join_now">Join Now</string>
    <string name="input_call_number">Enter A Meeting Number</string>
    <string name="input_call_password">Enter A Meeting Password</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="release_to_refresh">Release to Refresh</string>
    <string name="refreshing">Loading…</string>
    <string name="not_updated_yet"> Not Updated Yet</string>
    <string name="updated_at">Updated at %1$s Last Time</string>
    <string name="updated_just_now">Updated Just Now</string>
    <string name="time_error">Problem with Time</string>
    <string name="network">Network Detection</string>
    <string name="detecting_network">Detecting Network...</string>
    <string name="network_unconnected">Network Disconnected</string>
    <string name="network_Intranet">Using Intranet Currently</string>
    <string name="network_Extranet">Using Internet Currently</string>
    <string name="about_hexmeet">About</string>
    <string name="features_introduction">Introduction</string>
    <string name="license_and_service">Terms of Service</string>
    <string name="feedback">Feedback</string>
    <string name="content_not_empty">Content is empty, please input again</string>
    <string name="upgrade">Upgrade</string>
    <string name="tips">Tips</string>
    <string name="password">Password</string>
    <string name="update_password">Update Password</string>
    <string name="update_password_success">Update password succeeded</string>
    <string name="update_password_failed">Update password failed</string>
    <string name="password_not_empty">Empty password is not allowed, please input again.</string>
    <string name="commitpassword_not_empty">Confirmation password is empty, please input again.</string>
    <string name="group_name_not_empty">Group name is empty, please input again</string>
    <string name="verify_password">Verify Original Password</string>
    <string name="verify_password_tips">For password safety, input the original one before edit:</string>
    <string name="warning_4g_message">You are in a celluar network, would you like to continue?</string>
    <string name="warning_meeting_startnow">Start time will be moved to now, would you like to continue?</string>
    <string name="video_call">Video</string>
    <string name="audio_call">Audio</string>
    <string name="accept_in_audio">Audio</string>
    <string name="end_call">Hang Up</string>
    <string name="accept_in_video">Video</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="detail">Details</string>
    <string name="call_rate">Call Rate</string>
    <string name="call_rate_3g">3G/4G Rate</string>
    <string name="call_rate_WiFi">WLAN Rate</string>
    <string name="conf_name">Name</string>
    <string name="start_time">Starts</string>
    <string name="end_time">Ends</string>
    <string name="conf_num">Meeting ID</string>
    <string name="my_room_id">Room ID: </string>
    <string name="conf_password">Passcode</string>
    <string name="input_password_tips">Enter a meeting passcode</string>
    <string name="meeting_hjt">Meeting</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="conf_remark">Notes</string>
    <string name="conf_remark_tips">Enter meeting notes</string>
    <string name="invite_contacts">Invite contact here</string>
    <string name="duration">Duration</string>
    <string name="share">Share</string>
    <string name="generator">Organizer: </string>
    <string name="no_conference_hint">You have no meeting scheduled.</string>
    <string name="please_click">Touch</string>
    <string name="add_conference">to schedule one.</string>
    <string name="participant_detail">Attendees</string>
    <string name="conf_success">Scheduled Successfully</string>
    <string name="conf_success_tips">Your meeting is scheduled!</string>
    <string name="confname">Meeting Name: </string>
    <string name="starttime">Starts: </string>
    <string name="endtime">Ends: </string>
    <string name="confnum">Meeting ID: </string>
    <string name="confpassword">Passcode: </string>
    <string name="share_wechat">Share to WeChat</string>
    <string name="wechat">WeChat</string>
    <string name="sync_calendar">Sync to Calendar</string>
    <string name="call_statistics">Media Statistics</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="enable_video">Start Video</string>
    <string name="stop_video">Stop Video</string>
    <string name="speaker_earphone">Speaker</string>
    <string name="conf_manage">Meeting Management</string>
    <string name="handup">Speech Request</string>
    <string name="speaker_mode">Speaker View</string>
    <string name="gallery_mode">Gallery View</string>
    <string name="audio_only_use_earphone">Please use earphone</string>
    <string name="audio_only_using_earphone">You are using earphone</string>
    <string name="request_speak">Speech Request</string>
    <string name="reverse_camera">Switch</string>
    <string name="mute_speaking">MicroPhone Mute</string>
    <string name="request_speak_is_sent">Speech request has been sent</string>
    <string name="allowed_speak">Your voice is being sent now</string>
    <string name="click_to_speak">Click to apply for a speech</string>
    <string name="speaking_forbidden">You have been muted by meeting manager</string>
    <string name="audio_only_mute_on">Muted</string>
    <string name="dialing_detail">Dialing Details</string>
    <string name="dialing">Dial</string>
    <string name="input_call_number_tips">Input meeting ID(plus *password)</string>
    <string name="no_call_record">No call records</string>
    <string name="tab_conference">Meetings</string>
    <string name="tab_me">Me</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="scan_qrcode_download_app">Scan QR code to download APP</string>
    <string name="share_it_to">You can also share as</string>
    <string name="friends_wechat">to Friends</string>
    <string name="circle_friends_wechat">to Moments</string>
    <string name="join_ok">Confirm to join</string>
    <string name="server">Server</string>
    <string name="login_user">Account/Mobile/Email</string>
    <string name="login">Log In</string>
    <string name="login_version">Version:</string>
    <string name="or">or</string>
    <string name="me_detail">Personal Information</string>
    <string name="logout">Log Out</string>
    <string name="setting">Settings</string>
    <string name="input_account_or_name">Enter an account or name</string>
    <string name="click_avatar">Click to set a photo</string>
    <string name="input_name">Enter your name</string>
    <string name="input_mobile">Enter your mobile number</string>
    <string name="input_email">Enter your email</string>
    <string name="commit">Done</string>
    <string name="my_password">Password</string>
    <string name="input_password">(4-16 characters)</string>
    <string name="next">Next</string>
    <string name="password_commit">Confirm</string>
    <string name="update_login_password_tips">To protect your account.Please update your password on the first login</string>
    <string name="parameters_setting">Parameters</string>
    <string name="defaults">Default</string>
    <string name="sync_to_calendar">Sync to Calendar Automatically</string>
    <string name="voicelink_time_sync">VoiceLink Time Sync</string>
    <string name="current_user">Account</string>
    <string name="old_password">Old</string>
    <string name="new_password">New</string>
    <string name="new_password_commit">Confirm</string>
    <string name="input_old_password">Enter a original password</string>
    <string name="input_new_password">Enter a new password</string>
    <string name="double_confirm">Enter again</string>
    <string name="logout_commit">Are you sure to log out?</string>
    <string name="shut_down">Close</string>
    <string name="packets_loss">Packet Loss Rate</string>
    <string name="resolution">Resolution</string>
    <string name="protocol">Transport Protocol</string>
    <string name="channel">Channel</string>
    <string name="rate">Rate(kbps)</string>
    <string name="rate_used">Rate Used(kbps)</string>
    <string name="user_cloud">Cloud User</string>
    <string name="login_cloud">Cloud Login</string>
    <string name="join_meeting_id">Meeting ID</string>
    <string name="join_meeting_name">Username in meeting</string>
    <string name="error_empty">Can not be empty</string>
    <string name="error_form">Invalid format</string>
    <string name="close_camera">Turn off Camera</string>
    <string name="close_mic">Turn off Microphone</string>
    <string name="advanced_setting">Advanced Settings</string>
</resources>