<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/call_statistics_title_bg">

    <TextView
        android:id="@+id/channel"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="2.5"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/channel"
        android:textColor="@color/font_color_313131"/>
    <View
        android:layout_width="1px"
        android:layout_height="@dimen/call_static_raw_height"
        android:background="@color/call_statistics_divider"/>

    <TextView
        android:id="@+id/protocol"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="1.5"
        android:textSize="15sp"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/protocol"
        android:textColor="@color/font_color_313131"/>

    <View
        android:layout_width="1px"
        android:layout_height="@dimen/call_static_raw_height"
        android:background="@color/call_statistics_divider"/>

    <TextView
        android:id="@+id/rate"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="1.5"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/rate"
        android:visibility="gone"
        android:textColor="@color/font_color_313131"/>

    <View
        android:layout_width="1px"
        android:layout_height="@dimen/call_static_raw_height"
        android:visibility="gone"
        android:background="@color/call_statistics_divider"/>

    <TextView
        android:id="@+id/rate_used"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="1.5"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/rate_used"
        android:textColor="@color/font_color_313131"/>

    <View
        android:layout_width="1px"
        android:layout_height="@dimen/call_static_raw_height"
        android:background="@color/call_statistics_divider"/>

    <TextView
        android:id="@+id/resolution"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="1.5"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/resolution"
        android:textColor="@color/font_color_313131"/>

    <View
        android:layout_width="1px"
        android:layout_height="@dimen/call_static_raw_height"
        android:background="@color/call_statistics_divider"/>

    <TextView
        android:id="@+id/packets_loss"
        android:layout_width="0dp"
        android:layout_height="@dimen/call_static_raw_height"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/packets_loss"
        android:textColor="@color/font_color_313131"/>

</LinearLayout>