<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hexmeet_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_password"
            android:textColor="@color/title_bar"
            android:textSize="@dimen/title_bar_font_size" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:src="@drawable/icon_back_black" />

        <TextView
            android:id="@+id/password_commit"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@drawable/submit_label"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/bg_card_border">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/current_user"
            android:textColor="#313131"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/username_label"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_card_border">

        <TextView
            android:id="@+id/password_original"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:text="@string/old_password"
            android:textColor="#313131"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/password_original"
            android:background="@drawable/bg_input_box"
            android:hint="@string/input_old_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#232323"
            android:textColorHint="#919191"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textSize="16sp">
            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_card_border">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:text="@string/new_password"
            android:textColor="#313131"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/password_label"
            android:background="@drawable/bg_input_box"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#232323"
            android:textColorHint="#919191"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textSize="16sp">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_card_border">

        <TextView
            android:id="@+id/confirm_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/new_password_commit"
            android:textColor="#313131"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/confirm_label"
            android:background="@drawable/bg_input_box"
            android:hint="@string/double_confirm"
            android:padding="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#232323"
            android:textColorHint="#919191"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>