<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <Button
        android:id="@+id/desc_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:text="@string/logout_commit"
        android:textAllCaps="false"
        android:textColor="#999999"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#dadada" />

    <Button
        android:id="@+id/commit_button"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="#ffffff"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="#FF6347"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentBottom="true"
        android:background="#dadada" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#ffffff"
        android:text="@string/shut_down"
        android:textAllCaps="false"
        android:textColor="#232323"
        android:textSize="15sp" />

</LinearLayout>