<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tips"
            android:textColor="#232323"
            android:textSize="17sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/warning_4g_message"
            android:textColor="#565656"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/delete_contact_btn"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/go_on"
            android:textAllCaps="false"
            android:textColor="#1E90FF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/delete_contact_btn"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#1E90FF"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>